variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: not found: type Green
getCouleurCorps():Green
                  ^