variables.RunHalf.scala.code
var biscuits = 0
var caseOrange = 0

getCouleurCorps():Green

while (2*biscuits != caseOrange+1) {
  avance();
  if (estSurBiscuit){
    biscuits += 1;
  if (estSurOrange) {
    caseOrange += 1;
  }
  }
}